added environment param to ribbit connect meta

--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   },
   "keywords": [
     "ribbit",
-    "ribbit",
-    "connect",
-    "bank",
-    "link"
+    "ribbit-connect",
+    "connect"
   ],
   "author": "Darryl Huffman <darryl@ribbit.ai>",
   "license": "ISC",
