--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^8.2.5",
+    "core-js": "^3.27.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
